<resources>
    <string name="app_name">Football Data Club</string>
    <string name="world_football_soccer_clubs_ranking">World Football / Soccer Clubs Ranking</string>
    <string name="football_soccer_club_world_ranking">Football / Soccer Club World Ranking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_10_worldwide_football_clubs">Top 10 Worldwide Football Clubs</string>
    <string name="no">No.</string>
    <string name="club">Club</string>
    <string name="country">Country</string>
    <string name="point">Point</string>
</resources>