<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#BBBFB8">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/slideShowContainer"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#5C8F75">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/top_10_worldwide_football_clubs"
                android:textSize="25sp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#888774"
                android:padding="7dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/club"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/country"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/point"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="#000000"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/viewClubs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>